updated ui with better layout

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,8 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_icons: ^1.0.0
+  shared_preferences: ^0.5.7 
   flutter_ion:
     path: ../
+  flutter_webrtc: ^0.5.7
 
   get: ^3.17.1
 
